--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -54,6 +54,13 @@
       display: flex;
       flex-direction: column;
       gap: 20px;
+
+      .footer__right__navs__nav {
+        a {
+          text-decoration: none;
+          color: #4A4A4A;
+        }
+      }
     }
   }
 }
