--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -2,19 +2,24 @@
   .container {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    /* padding-right: 160px; */
+    position: relative;
+    padding: 50px 0;
   }
 
   .header__logo__wrapper {
     display: flex;
     align-items: center;
     gap: 20px;
+    position: absolute;
+    top: -10px;
   }
 
   .header__navs {
     display: flex;
     align-items: center;
     gap: 20px;
+    margin: 0 auto;
 
     .header__nav {
       background: none;
@@ -42,14 +47,11 @@
   .header {
     .header__logo__wrapper {
       gap: 0;
-
-      p {
-        font-size: 15px;
-      }
+      top: 0;
 
       .header__logo {
-        height: 70px;
-        width: 70px;
+        height: 120px;
+        width: 120px;
       }
     }
 
@@ -67,6 +69,14 @@
   .header {
     display: flex;
     justify-content: center;
+
+    .container {
+      padding: 0;
+    }
+
+    .header__logo__wrapper {
+      position: relative;
+    }
 
     .header__navs {
       display: none;
