--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -94,7 +94,7 @@ h2 {
   .face__cards {
     margin: 50px;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
     width: 100%;
     gap: 20px;
   }
