--- a/src/components/cartDescriptionModal/cartDescriptionModal.css
+++ b/src/components/cartDescriptionModal/cartDescriptionModal.css
@@ -1,42 +1,51 @@
-.CartDescriptionModal__content {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: white;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    width: 1200px;
-    height: fit-content;
-    padding: 50px;
+.overlay {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 100vh;
+  z-index: 999px;
+  background-color: rgba(0, 0, 0, 0.8);
+}
 
-    h2 {
-        margin-bottom: 10px;
-    }
+.CartDescriptionModal__content {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: white;
+  padding: 20px;
+  border-radius: 20px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  width: 1200px;
+  height: fit-content;
+  padding: 30px 20px;
+
+  h2 {
+    margin-bottom: 10px;
+  }
 }
 
 .CartDescriptionModal__content__wrap {
-    display: flex;
-    align-items: start;
-    gap: 80px;
+  display: flex;
+  align-items: start;
+  gap: 80px;
 }
 
 .CartDescriptionModal__content__image,
 .CartDescriptionModal__content__right {
-    width: calc(50% - 40px);
+  width: calc(50% - 40px);
 }
 
 .CartDescriptionModal__content__right {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
 
 .close-button {
-    background: transparent;
-    border: none;
-    position: absolute;
-    top: 10px;
-    left: 10px;
+  background: transparent;
+  border: none;
+  position: absolute;
+  top: 10px;
+  left: 10px;
 }
