--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,18 @@ body {
   letter-spacing: 1.1;
   color: #4a4a4a;
   font-family: "Lato", sans-serif;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+html, body {
+  height: 100%;
+  margin: 0;
+}
+
+main {
+  flex: 1; 
 }
 
 * {
