--- a/src/app/admin/admin.css
+++ b/src/app/admin/admin.css
@@ -135,7 +135,8 @@
     font-size: 15px;
   }
 
-  input, textarea {
+  input,
+  textarea {
     width: 100%;
     max-width: 100%;
     max-height: 300px;
@@ -163,4 +164,66 @@
     width: 100%;
     height: auto;
   }
+}
+
+.overlay {
+  /* Фіксуємо положення відносно вікна браузера */
+  position: fixed;
+  
+  /* Встановлюємо нульові координати для всіх сторін */
+  top: 0;
+  left: 0;
+  
+  /* Розтягуємо на всю ширину та висоту вікна */
+  width: 100%;
+  height: 100vh;
+  
+  /* ВАЖЛИВО: z-index має бути просто числом. Приставка 'px' робить властивість недійсною */
+  z-index: 998;
+  
+  /* Напівпрозорий чорний фон */
+  background-color: rgba(0, 0, 0, 0.8);
+  
+  /* Додаємо flex, щоб модалка всередині була по центру */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.editingModal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: gray;
+  padding: 30px;
+  border-radius: 20px;
+  z-index: 999;
+  width: 1200px;
+}
+
+.editingModal__form {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.editModal__image-preview__img {
+  width: 400px;
+  height: auto;
+}
+
+.editModal__input {
+  width: 100%;
+  max-width: 100%;
+  max-height: 300px;
+  background-color: lightgray;
+  border: none;
+  padding: 10px;
+  font-size: 15px;
+  border-radius: 10px;
+}
+
+.editModal__button {
+  margin: 0 auto;
 }
