--- a/src/components/cartDescriptionModal/cartDescriptionModal.css
+++ b/src/components/cartDescriptionModal/cartDescriptionModal.css
@@ -19,6 +19,8 @@
   width: 1200px;
   height: fit-content;
   padding: 30px 20px;
+  max-height: 80vh;
+  overflow-y: scroll;
 
   h2 {
     margin-bottom: 10px;
@@ -40,6 +42,10 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
+
+  p {
+    word-break: break-word;
+  }
 }
 
 .close-button {
