--- a/src/app/admin/admin.css
+++ b/src/app/admin/admin.css
@@ -238,3 +238,18 @@
 .editModal__button {
   margin: 0 auto;
 }
+
+.face__detailsButton {
+  max-width: 100px;
+  border: none;
+  /* background-color: #4a4a4a; */
+  background-color: transparent;
+  /* padding: 10px 15px; */
+  color: #b39274;
+  font-size: 15px;
+  font-weight: 700;
+  margin: 0 auto;
+  text-align: center;
+  border-radius: 10px;
+  margin-bottom: 10px;
+}
