--- a/src/components/cartDescriptionModal/cartDescriptionModal.css
+++ b/src/components/cartDescriptionModal/cartDescriptionModal.css
@@ -18,9 +18,17 @@
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   width: 1200px;
   height: fit-content;
-  padding: 30px 20px;
+  padding: 50px 20px;
   max-height: 80vh;
   overflow-y: scroll;
+  z-index: 999;
+
+  .close-button {
+    background-color: gray;
+    padding: 10px 13px;
+    border-radius: 50%;
+    position: absolute;
+  }
 
   h2 {
     margin-bottom: 10px;
@@ -43,7 +51,7 @@
   flex-direction: column;
   gap: 20px;
 
-  p {
+  div {
     word-break: break-word;
   }
 }
